--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: Boots And Spurs;
+  src: url("../fonts/BootsAndSpurs.ttf") format("truetype");
+}
+
+h1,
+h2,
+.logo {
+  font-family: "Boots And Spurs", Arial, Helvetica, sans-serif;
+}
+
+.product-list h2 {
+  font-family: Roboto, Verdana, Geneva, Tahoma, sans-serif;
+}
+
 header,
 footer {
   background-color: #202020;
