--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,20 @@ footer {
   text-align: center;
 }
 
-nav a {
-  text-decoration: none;
+/* Home page */
+.welcome {
+  background-image: url(../images/home-header.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-position-y: bottom;
+  min-height: 70vh;
 }
 
-nav a:hover {
-  text-decoration: underline;
+.selling-points_images {
+  border-radius: 100px;
+}
+
+.review_images {
+  border-radius: 50%;
 }
