--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,10 @@ footer {
   border-radius: 50%;
 }
 
-input[type="submit"] {
-  color: white;
-  background-color: red;
+/* Contact page */
+input,
+select,
+textarea {
+  border: 1px solid #c4c4c4;
+  border-radius: 5px;
 }
