--- a/css/styles.css
+++ b/css/styles.css
@@ -29,10 +29,6 @@ nav li {
   text-decoration: underline;
 }
 
-nav a:hover {
-  font-weight: bold;
-}
-
 header,
 footer {
   background-color: #202020;
@@ -46,20 +42,28 @@ a {
 
 header a {
   color: #ffffff;
+  padding: 10px;
 }
 
 .cta {
   background-color: #bb0000;
   color: #fff;
-  font-size: 1.5em;
+  font-size: 1em;
+  text-transform: uppercase;
+  padding: 10px 80px;
   border-radius: 5px;
+}
+
+.cta-small {
+  padding: 8 px 30 px;
+  font-size: 0.8em;
 }
 
 .reviews {
   background-color: #e8e8e8;
 }
 
-.featured--products {
+.featured__products {
   background-color: #fbfbfb;
 }
 
@@ -96,8 +100,4 @@ select,
 textarea {
   border: 1px solid #c4c4c4;
   border-radius: 5px;
-}
-
-.hide {
-  display: none;
 }
